# DAFTAR-ML

./: .gitignore  LICENSE  README.md  WIKI.md  Xylose_CAI_orthofinder_binary_preprocessed_MI500_classif_TFM_MI500_classif_feature_scores.csv  Xylose_CAI_orthofinder_binary_preprocessed_MI500_classif_TFM_MI500_classif_report.txt  Xylose_CAI_orthofinder_preprocessed_MI500_regression_MI500_regression_feature_scores.csv  Xylose_CAI_orthofinder_preprocessed_MI500_regression_MI500_regression_report.txt  cv_calculator.py  example_config.yaml  pyproject.toml  requirements.txt  run_colors.py  run_daftar.py  setup.py  test_cv_seeds.py
DAFTAR-ML_Xylose_xgboost_classification_cv2x2x1/: figures_explanation.txt  performance.txt  predictions_vs_actual_overall.csv  shap_feature_metrics.csv  shap_features_summary.txt
DAFTAR-ML_Xylose_xgboost_classification_cv2x2x1/feature_importance/: feature_importance_values_fold.csv  feature_importance_values_sample.csv
DAFTAR-ML_Xylose_xgboost_classification_cv2x2x1/fold_1/: best_model_fold_1.pkl  feature_importance_fold_1.csv  fold_1_samples.csv  hyperparameter_tuning_summary_fold1.txt  predictions_vs_actual_fold_1.csv  shap_values_fold_1.csv
DAFTAR-ML_Xylose_xgboost_classification_cv2x2x1/fold_2/: best_model_fold_2.pkl  feature_importance_fold_2.csv  fold_2_samples.csv  hyperparameter_tuning_summary_fold2.txt  predictions_vs_actual_fold_2.csv  shap_values_fold_2.csv
daftar/: __init__.py  cli.py
daftar/analysis/: __init__.py  classification.py  regression.py
daftar/core/: callbacks.py  config.py  data_processing.py  evaluation.py  logging_utils.py  pipeline.py
daftar/models/: __init__.py  base.py  hyperparams.py  hyperparams.yaml  rf_classification.py  rf_regression.py  xgboost_classification.py  xgboost_regression.py
daftar/models/classification/: random_forest.py  xgboost.py
daftar/models/regression/: random_forest.py  xgboost.py
daftar/tools/: __init__.py  color_visualizer.py  colors.py  colors_backup.py  cv_calculator.py  preprocess.py  run_daftar.py
daftar/utils/: __init__.py  file_utils.py  validation.py  warnings.py
daftar/viz/: __init__.py  classification.py  color_definitions.py  colors.py  colors.yaml  common.py  core_plots.py  feature_explanation.py  feature_importance.py  metrics.py  optuna.py  per_class_shap.py  predictions.py  regression.py  shap.py  shap_interaction_utils.py
