[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daftar-ml"
version = "0.1.2"
description = "Data-Agnostic Feature-Target Analysis & Ranking Machine Learning Pipeline (DAFTAR-ML)"
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}

authors = [
    {name = "Tina Melie"}
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License ::...", 
    "Operating System :: OS Independent",
] 