[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daftar-ml"
version = "0.2.4"
description = "Data-Agnostic Feature-Target Analysis & Ranking Machine Learning Pipeline (DAFTAR-ML)"
authors = [
    {name = "Tina Melie", email = "drtinamelie@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "xgboost>=1.5.0",
    "shap>=0.40.0",
    "optuna>=2.10.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "pyyaml>=6.0",
    "joblib>=1.1.0",
    "tqdm>=4.64.0",
    "plotly>=5.24.1",
    "scipy>=1.7.0",
    "networkx>=2.6.0",
]

[project.urls]
Homepage = "https://github.com/tinamelie/DAFTAR-ML"
Repository = "https://github.com/tinamelie/DAFTAR-ML"
Issues = "https://github.com/tinamelie/DAFTAR-ML/issues"
Documentation = "https://github.com/tinamelie/DAFTAR-ML/blob/main/WIKI.md"

[project.scripts]
daftar = "daftar.cli:main"
run-daftar = "daftar.cli:main"
daftar-preprocess = "daftar.tools.preprocess:main"
daftar-cv = "daftar.tools.cv_calculator:main"
daftar-colors = "daftar.viz.colors:main"

[tool.setuptools]
packages = {find = {exclude = ["tests", "results", "examples"]}}
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.toml", "LICENSE", "README.md"] 